...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/label_restore_wallet_word_list" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:inputType="textMultiLine|textVisiblePassword"
                    android:lines="8" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_restore"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:elegantTextHeight="true"
                android:text="@string/button_restore" />
...
