<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_wallet"
        android:icon="@drawable/ic_add_24"
        android:title="@string/menu_add_wallet"
        app:iconTint="@color/text_color"
        app:showAsAction="always" />
</menu>