...

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_fee_custom"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/public_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_fee_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
...
