...
                    app:layout_constraintTop_toBottomOf="@id/title_create_wallet" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_restore_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/half_horizontal_margin">

            <androidx.constraintlayout.widget.ConstraintLayout

...
